# Foundry

./: .env.example  .gitignore  AGENTS.md  Foundry.md  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: canonical_json.py  ledger.py  status.py  workspace.py
docs/: classification-axioms.md  classification-predicates.md  constitution.md  decision-register.md  hermes-migration-plan.md  implementation-plan.md  ontology.md  pipeline-ledger.md  schema-explanation.md  taxonomy.md  ubiquitous-language.md
docs/adr/: 001-structured-json-as-canonical-source.md  002-immutability-of-phase-outputs.md  003-deterministic-document-extraction.md  004-dumb-orchestration.md  005-enforce-minimum-information-principle.md  006-graph-metadata-over-textual-transclusion.md  007-deterministic-classification-decision-tree.md  008-two-pass-pipeline.md  009-formal-edge-ontology.md  010-discriminated-unions.md  011-constrained-decoding.md  012-tiered-agent-capabilities.md  013-skill-state-isolation.md  014-mcp-integration-for-graph-operations.md  015-adopt-okf-as-rendering-target.md  016-adopt-forgecode-as-agent-harness.md  017-staged-pipeline-sequencing.md  018-adopt-hermes-as-agent-harness.md
schemas/: discoverer_schema.py  enrichment.py  moc.py  pipeline_ledger.py  review.py  taxonomy.py
skills/foundry-discover/: SKILL.md
skills/foundry-discover/scripts/: run_discover.py
skills/foundry-ingest/: SKILL.md
skills/foundry-ingest/scripts/: _bootstrap.py  extract_document.py  register_document.py
skills/foundry-status/: SKILL.md
skills/foundry-status/scripts/: run_status.py
tests/: support.py  test_adr_compliance.py  test_core_canonical_json.py  test_core_ledger.py  test_discoverer.py  test_enrichment.py  test_moc.py  test_pipeline_ledger.py  test_review.py  test_skills_discover.py  test_skills_ingest.py  test_taxonomy.py
